# tauri-with-openblocks-poc

./: README.md  index.html  package-lock.json  package.json
openblocks/: tauri-with-openblocks-poc.json
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
