[package]
name = "tauri-with-openblocks-poc"
version = "0.0.1"
description = "https://github.com/qbx2/tauri-with-openblocks-poc"
authors = ["qbx2"]
license = "MIT"
repository = "https://github.com/qbx2/tauri-with-openblocks-poc"
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["api-all"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
